add style + fix code

--- a/src/app/components/animals-grid/animals-grid.component.css
+++ b/src/app/components/animals-grid/animals-grid.component.css
@@ -1,7 +1,7 @@
 .background_div{
     height: 100%;
     width: 100%;
-    background-color: cyan;
+    background-color: #FFE4B5;
 }
 
 mat-card {
@@ -10,7 +10,7 @@ mat-card {
 }
 
 mat-grid-list {
-    background-color: var(--purple);
+    background-color: #FFE4B5;
     padding-top: 4px;
     flex: 1;
 }
@@ -68,4 +68,15 @@ mat-card-content {
 img{
     object-fit:cover;
     border-radius: 4px;
+}
+
+.noAnimals{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+::ng-deep.mat-tab-body.mat-tab-body-active{
+    background-color: #FFE4B5;
 }
