--- a/src/app/pages/add-animal/add-animal.component.html
+++ b/src/app/pages/add-animal/add-animal.component.html
@@ -14,30 +14,26 @@
         <div class="colum">
             <form class="example-form">
                 <mat-form-field class="example-full-width">
-                  <mat-label>Name</mat-label>
+                  <mat-label>{{'name' | translate}}</mat-label>
                   <input type="text" matInput [formControl]="nameFormControl" placeholder="Ex. Pedro Martinez" name="Name">
-                  <mat-error *ngIf="nameFormControl.hasError('email') && !nameFormControl.hasError('required')">
-                    Please enter a valid name 
-                  </mat-error>
+ 
                   <mat-error *ngIf="nameFormControl.hasError('required')">
-                    Name is <strong>required</strong>
+                    {{'nameREquired' | translate}} <strong>{{'Required' | translate}}</strong>
                   </mat-error>
                 </mat-form-field>
                 <mat-form-field class="example-full-width">
-                    <mat-label>Age</mat-label>
+                    <mat-label>{{'age' | translate}}</mat-label>
                     <input type="text" matInput [formControl]="ageFormControl" placeholder="Ex. pedro@gmail.com" name="Age">
-                    <mat-error *ngIf="ageFormControl.hasError('email') && !ageFormControl.hasError('required')">
-                      Please enter a valid email address
-                    </mat-error>
+
                     <mat-error *ngIf="ageFormControl.hasError('required')">
-                      Email is <strong>required</strong>
+                      {{'ageRequired' | translate}} <strong>{{'Requireda' | translate}}</strong>
                     </mat-error>
                 </mat-form-field>
 
 
 
                   <mat-form-field class="example-full-width">
-                    <mat-label>Race</mat-label>
+                    <mat-label>{{'race' | translate}}</mat-label>
                     <input type="text"
                            placeholder="Pick one"
                            aria-label="Number"
@@ -52,7 +48,7 @@
                   </mat-form-field>
 
                   <mat-form-field class="example-full-width">
-                    <mat-label>City</mat-label>
+                    <mat-label>{{'city' | translate}}</mat-label>
                     <input type="text"
                            placeholder="Pick one"
                            aria-label="Number2"
@@ -69,7 +65,7 @@
                   
 
                 <mat-form-field appearance="fill">
-                    <mat-label>Sexe</mat-label>
+                    <mat-label>{{'sexe' | translate}}</mat-label>
                     <mat-select [(ngModel)]="selectedSexe" name="sexe">
                       <mat-option *ngFor="let sexe of sexes" [value]="sexe.value">
                         {{sexe.value}}
@@ -77,7 +73,7 @@
                     </mat-select>
                   </mat-form-field>
                 <mat-form-field appearance="fill">
-                    <mat-label>Especie</mat-label>
+                    <mat-label>{{'especie' | translate}}</mat-label>
                     <mat-select [(ngModel)]="selectedEspecie" name="especie">
                       <mat-option *ngFor="let food of especies" [value]="food.value">
                         {{food.value}}
@@ -86,7 +82,7 @@
                   </mat-form-field>
                 
                   <mat-form-field appearance="fill">
-                    <mat-label>caracter</mat-label>
+                    <mat-label>{{'caracter' | translate}}</mat-label>
                     <mat-select [(ngModel)]="selectedCaracter" name="caracter">
                       <mat-option *ngFor="let sexe of caracters" [value]="sexe.value">
                         {{sexe.value}}
@@ -94,7 +90,7 @@
                     </mat-select>
                   </mat-form-field>
                   <mat-form-field appearance="fill">
-                    <mat-label>Hair_type</mat-label>
+                    <mat-label>{{'hairType' | translate}}</mat-label>
                     <mat-select [(ngModel)]="selectedHairType" name="hair">
                       <mat-option *ngFor="let sexe of hair_types" [value]="sexe.value">
                         {{sexe.value}}
@@ -105,7 +101,7 @@
 
 
                 <div>
-                    <span>foto</span>
+                    <span>{{'photo' | translate}}</span>
                     <input type="file" (change)="onChange($event)"/>
                 </div>
                  
@@ -116,14 +112,14 @@
               
         </div>
     </mat-grid-tile>
-        <mat-grid-tile
+    <mat-grid-tile
     [colspan]="2"
     [rowspan]="3"
     >
         <div class="default_div_left">
             <div class="radio-group">
                 <div class="span_text">
-                    Tamany:
+                  {{'size' | translate}}:
                 </div>
                 <mat-radio-group
                 [(ngModel)]="tamanyToggle"
@@ -133,19 +129,19 @@
                 
                 >
                 <mat-radio-button value="small" (click)="writeTest()">
-                    Petit
+                  {{'small' | translate}}
                 </mat-radio-button>
                 <mat-radio-button value="medium" (click)="writeTest()">
-                    Mitjà
+                  {{'medium' | translate}}
                 </mat-radio-button>
                 <mat-radio-button value="big" (click)="writeTest()">
-                    Gran
+                  {{'big' | translate}}
                 </mat-radio-button>
             </mat-radio-group>
         </div>
         <div class="radio-group">
             <div class="span_text">
-                Castrat:
+              {{'castrat' | translate}}:
             </div>
             <mat-radio-group 
             value="tamany"
@@ -155,16 +151,16 @@
             
             >
             <mat-radio-button value="true">
-                si
+              {{'yes' | translate}}
             </mat-radio-button>
             <mat-radio-button value="false">
-                no
+              {{'no' | translate}}
             </mat-radio-button>
         </mat-radio-group>
     </div>
     <div class="radio-group">
         <div class="span_text">
-            Conte microxip:
+          {{'microxip' | translate}}:
         </div>
         <mat-radio-group 
         value="tamany"
@@ -174,10 +170,10 @@
         
         >
         <mat-radio-button value="true">
-            si
+          {{'yes' | translate}}
         </mat-radio-button>
         <mat-radio-button value="false">
-            no
+          {{'no' | translate}}
         </mat-radio-button>
     </mat-radio-group>
 </div>
@@ -190,23 +186,23 @@
     <div class="default_div">
         <div class="radio-group">
             <div class="span_text">
-                Vacunat a l'ultim any:
+              {{'vacunated' | translate}}:
             </div>
         <mat-radio-group
         [(ngModel)]="vacunatToggle"
         aria-label="example-radio-group"
         >
             <mat-radio-button value="true">
-                Si
+              {{'yes' | translate}}
             </mat-radio-button>
             <mat-radio-button value="false">
-                No
+              {{'no' | translate}}
             </mat-radio-button>
         </mat-radio-group>
         </div>
         <div class="radio-group">
             <div class="span_text">
-                Desparasitat a l'ultim any:
+              {{'desparasitat' | translate}}:
             </div>
         <mat-radio-group
         [(ngModel)]="desparasitatToggle" 
@@ -214,10 +210,10 @@
         aria-label="example-radio-group-2"
         >
             <mat-radio-button value="true">
-                si
+              {{'yes' | translate}}
             </mat-radio-button>
             <mat-radio-button value="false">
-                no
+              {{'no' | translate}}
             </mat-radio-button>
         </mat-radio-group>
     </div>
@@ -228,13 +224,11 @@
         [rowspan]="1"
         >               
         <mat-form-field  class="example-full-width">
-          <mat-label>Description</mat-label>
+          <mat-label>{{'description' | translate}}</mat-label>
           <textarea type="text" matInput [formControl]="description" placeholder="Ex. Pedro Martinez" name="Name"></textarea>
-          <mat-error *ngIf="description.hasError('email') && !description.hasError('required')">
-            Please enter a valid name 
-          </mat-error>
+
           <mat-error *ngIf="description.hasError('required')">
-            Name is <strong>required</strong>
+            {{'descriptionRequired' | translate}} <strong>{{'Requireda' | translate}}</strong>
           </mat-error>
         </mat-form-field>
 
@@ -243,11 +237,10 @@
     <mat-grid-tile
         [colspan]="4"
         [rowspan]="1"
-    >
-
-  <button mat-raised-button class="loginbtt" (click)="register_animal()">Add Animal</button>
+        >               <button mat-raised-button class="loginbtt" (click)="register_animal()"> {{'addAnimal' | translate}}</button>
 
     </mat-grid-tile>
+
 </mat-grid-list>
 
 
