--- a/src/app/components/adv-grid/adv-grid.component.css
+++ b/src/app/components/adv-grid/adv-grid.component.css
@@ -39,7 +39,7 @@ mat-card-content {
     bottom: 0;
     right: 0;
     width: 100%;
-    background-color: blue;
+    background-color: #FFE4B5;
 
 }
 
