--- a/src/app/components/adv-grid2/adv-grid2.component.html
+++ b/src/app/components/adv-grid2/adv-grid2.component.html
@@ -27,4 +27,5 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
     </div>
 </mat-grid-list>
 
+<div class="noAnimals" *ngIf="!!!AllAnimals | async"> {{'favAnimalError' | translate}}</div>
 
