--- a/src/app/components/fav-grid/fav-grid.component.html
+++ b/src/app/components/fav-grid/fav-grid.component.html
@@ -28,3 +28,6 @@ style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-w
 </mat-grid-list>
 
 
+<div class="noAnimals" *ngIf="!!favAnimals | async"> {{'favAnimalError' | translate}}</div>
+
+
