--- a/src/app/pages/config-page/config-page.component.css
+++ b/src/app/pages/config-page/config-page.component.css
@@ -1,5 +1,6 @@
 mat-grid-list{
-    background-color: lightsteelblue;
+    background-color: #FFE4B5;
+
 }
 .footer-header{
     position: fixed;
@@ -29,6 +30,20 @@ mat-radio-group {
 }
 mat-radio-button{
     margin-top: 32px;
+}
+
+
+::ng-deep.mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+    border-color: #FF8C00;
+}
+
+::ng-deep.mat-radio-button.mat-accent .mat-radio-inner-circle, .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple), .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple, .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple {
+    background-color: #FF8C00;
+}
+
+
+button{
+    background-color: #FF8C00;
 }
 
 .cat{
