--- a/src/app/pages/edit-animal/edit-animal.component.css
+++ b/src/app/pages/edit-animal/edit-animal.component.css
@@ -6,7 +6,7 @@
 }
 
 mat-grid-list{
-    background-color: lightsteelblue;
+    background-color: #FFE4B5;
 }
 
 
@@ -88,13 +88,21 @@ mat-divider{
     font-weight: 600;
 }
 
+::ng-deep.mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
+    border-color: #FF8C00;
+}
+
+::ng-deep.mat-radio-button.mat-accent .mat-radio-inner-circle, .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple), .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple, .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple {
+    background-color: #FF8C00;
+}
+
 ::ng-deep .mat-radio-button.mat-radio-disabled.mat-radio-checked .mat-radio-outer-circle, .mat-radio-button.mat-radio-disabled .mat-radio-outer-circle {
-    border-color: red;
-    color: red;
+    border-color: 	#FF8C00;
+    color: 	#FF8C00;
 }
 
 ::ng-deep .mat-radio-button.mat-radio-disabled .mat-radio-inner-circle {
-    background-color: red;
+    background-color: 	#FF8C00;
 
 }
 
