--- a/src/app/pages/index/index.component.css
+++ b/src/app/pages/index/index.component.css
@@ -1,7 +1,15 @@
 
+.background{
+    width: 100%;
+    height: 100%;
+    background-color: #FFE4B5;
+}
+
+
+
 .top-spacer {
     height: 38px;
-    background-color: var(--purple);
+    background-color: #FFE4B5;
 }
 
 button {
@@ -10,7 +18,7 @@ button {
 }
 
 .content{
-    background-color: var(--purple);
+    background-color: #FFE4B5;
 
 }
 
@@ -24,10 +32,24 @@ button {
 .background_div{
     height: 100%;
     width: 100%;
-    background-color: rgb(119, 255, 119);
+    background-color: #FFE4B5;
 }
 
+mat-button-toggle{
+    color: black;
+    background-color: #FF8C00;
+}
+button{
+    background-color: #FF8C00;
+}
 
+mat-tab-group{
+    background-color: 	#FF8C00;
+    color: black;
+}
 
+::ng-deep.mat-tab-label .mat-tab-label-content {
+    color: black;
+}
 
 
