--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,5 +1,11 @@
 mat-grid-list{
-    background-color: lightsteelblue;
+    background-color: #FFE4B5;
+}
+
+.background{
+    width: 100%;
+    height: 100%;
+    background-color: #FFE4B5;
 }
 
 
@@ -61,4 +67,8 @@ mat-grid-list{
 
   .spanw {
       width: 67%;
+  }
+
+  button{
+      background-color: #FF8C00;
   }
