--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="background">
 <mat-grid-list cols="4" rows="7"> 
 
     <mat-grid-tile
@@ -8,9 +9,7 @@
     <mat-grid-tile
         [colspan]="4"
         [rowspan]="1"
-        [style.background]="'red'"
         >
-        logo
     </mat-grid-tile>
     <mat-grid-tile
         [colspan]="4"
@@ -19,23 +18,20 @@
         <div class="colum">
             <form class="example-form">
                 <mat-form-field class="example-full-width">
-                  <mat-label>Email</mat-label>
+                  <mat-label>{{'email' | translate}}</mat-label>
                   <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. marc@example.com">
                   <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                    Please enter a valid email address
+                    {{'emailError' | translate}}
                   </mat-error>
                   <mat-error *ngIf="emailFormControl.hasError('required')">
-                    Email is <strong>required</strong>
+                    {{'emailRequired' | translate}} <strong>{{'Required' | translate}}</strong>
                   </mat-error>
                 </mat-form-field>
                 <mat-form-field class="example-full-width">
-                    <mat-label>Password</mat-label>
+                    <mat-label>{{'password' | translate}}</mat-label>
                     <input type="password" matInput [formControl]="passwordFormControl" placeholder="********">
-                    <mat-error *ngIf="passwordFormControl.hasError('email') && !passwordFormControl.hasError('required')">
-                      Please enter a valid email address
-                    </mat-error>
                     <mat-error *ngIf="passwordFormControl.hasError('required')">
-                      Password is <strong>required</strong>
+                      {{'passwordRequired' | translate}} <strong>{{'Requireda' | translate}}</strong>
                     </mat-error>
                   </mat-form-field>
               </form>
@@ -56,10 +52,11 @@
         [rowspan]="2"
         >
         <div class="register"> 
-            <span class="spanw">¿No tienes una cuenta?</span>
-            <button mat-stroked-button (click)="gotoRegister()">Register</button>
+            <span class="spanw">{{'dontHaveAccount' | translate}}</span>
+            <button mat-stroked-button (click)="gotoRegister()">{{'register' | translate}}</button>
         </div>
     </mat-grid-tile>
 
 </mat-grid-list>
 
+</div>
