--- a/src/app/pages/recomended/recomended.component.html
+++ b/src/app/pages/recomended/recomended.component.html
@@ -1,1 +1,14 @@
-<p>recomended works!</p>
+
+
+<div class="background">
+<div class="back_button"> <button mat-mini-fab (click)="goBack()"><mat-icon class="white-icon">arrow_back</mat-icon></button></div>
+<mat-tab-group mat-align-tabs="center"[selectedIndex]="">
+    <mat-tab label="{{'recomended' | translate}}" >
+        <app-recomend-grid></app-recomend-grid>
+    </mat-tab>
+
+</mat-tab-group>
+
+<app-footer class="footer-header"></app-footer>
+
+</div>
